typewire/tests/compile_fail/tag_and_untagged.rs
use typewire::Typewire;

#[derive(Clone, PartialEq, Typewire)]
#[serde(tag = "type", untagged)]
enum Bad {
    A,
    B,
}

fn main() {}
