typewire/tests/compile_fail/tag_and_untagged.stderr
error: cannot combine `tag` and `untagged`
 --> tests/compile_fail/tag_and_untagged.rs:5:6
  |
5 | enum Bad {
  |      ^^^
